--- a/app/views/map/post.html.erb
+++ b/app/views/map/post.html.erb
@@ -20,7 +20,6 @@
       <!-- div that will display the map that is set using below javascript -->
     <div id="map"></div>
     <div id="map-detail">
-
         <table>
             <thead>
                 <td><h4><%= @address.address %></h4>
@@ -32,11 +31,28 @@
             </tr>
             <tr>
         <% if @risk_level %>
-                  <td class="risk risk-<%= @risk_level %>"><%= @risk_text %>&nbsp&nbsp<span class="trigger" data-tooltip="#riskTooltip"><img src="assets/question.png" /></span>
+                  <td class="risk risk-<%= @risk_level %>"><%= @risk_text %>
                   </td>
                 <% else %>
                   <td class="risk">No risk data is available at this location</td>
                 <% end %>
+            </tr>
+            <tr>
+                <td class="note">
+                    <a href="#" class="tooltip"> About Risk Level <span> 
+                    <img class="callout" src="src/callout.gif" /> 
+                    <strong> About Risk Level </strong>
+                    <br /> 
+                    The risk level is supplied by the Texas Forest Service Wildfire Risk Assessment 
+                    Portal (TxWRAP), which uses the Fire Intensity Scale (FIS). 
+                    The FIS quantifies potential fire intensity based on high to extreme weather 
+                    conditions, fuels, and topography. </span> </a>  
+                    <span> 
+                    <img class="callout" src="src/callout.gif" /> 
+                    &#124;
+                <a href="http://www.texaswildfirerisk.com/Map" target="blank">go to TxWRAP site</a>
+                </td> 
+            </tr>        
            <!-- <tr>
                 <td colspan="2" class="note">See more about your risk level, here.</td>
             </tr>-->
@@ -48,19 +64,22 @@
             </tr>
             <tr>
                 <td><span class="condition-type">Inside of a Burn Ban: </span><span class="class="condition"> <%= @inside_burnban %></span></td>
-            </tr>             
+            </tr>        
         </table>
+
 <!--      <table id="table-map">
             <tr>
                 <td class="condition-type">Distance to fire station:</td>
                 <td class="condition"> <%= @distance %> miles</td>
             </tr> -->
             <% unless user_signed_in? %>
-
+<!-- <div class="tooltip" id="riskTooltip">
+    The risk level is supplied by the Texas Forest Service Wildfire Risk Assessment Portal (TxWRAP), which uses the Fire Intensity Scale (FIS). The FIS quantifies potential fire intensity based on high to extreme weather conditions, fuels, and topography. Find out more on <a href="http://www.texaswildfirerisk.com/Map">the TxWRAP</a>.
+</div>-->
           <h4>
               <br>
               <br>
-              Help your home and community stay prepared for wildfire...
+              Want to get started?
           </h4>
             <a href="users/sign_up"><button class="blue button signup big">sign up now >></button></a>
             <% end %>
@@ -78,7 +97,7 @@
   <script src="http://code.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
   <script type="text/javascript" src="app/assets/javascripts/wax.leaflet.min.js"></script>
   <script type="text/javascript" src="app/assets/javascripts/cartodb-leaflet.js"></script>
-  <script type="text/javascript" src="app/assets/javascripts/tooltip.js"></script>
+<!--  <script type="text/javascript" src="app/assets/javascripts/tooltip.js"></script>-->
   <% if @coordinates %>
     <script type="text/javascript">
         $(document).ready(function() {
@@ -128,6 +147,4 @@
   <% end %>
 <% end %>
 
- <div class="tooltip" id="riskTooltip">
-    The risk level is supplied by the Texas Forest Service Wildfire Risk Assessment Portal (TxWRAP), which uses the Fire Intensity Scale (FIS). The FIS quantifies potential fire intensity based on high to extreme weather conditions, fuels, and topography. Find out more on <a href="http://www.texaswildfirerisk.com/Map">the TxWRAP</a>.
-</div>
+
