added callout image

--- a/app/views/map/post.html.erb
+++ b/app/views/map/post.html.erb
@@ -40,7 +40,7 @@
             <tr>
                 <td class="note">
                     <a href="#" class="tooltip"> About Risk Level <span> 
-                    <img class="callout" src="src/callout.gif" /> 
+                    <img class="callout" src="/assets/callout.png" /> 
                     <strong> About Risk Level </strong>
                     <br /> 
                     The risk level is supplied by the Texas Forest Service Wildfire Risk Assessment 
@@ -48,7 +48,7 @@
                     The FIS quantifies potential fire intensity based on high to extreme weather 
                     conditions, fuels, and topography. </span> </a>  
                     <span> 
-                    <img class="callout" src="src/callout.gif" /> 
+                    <img class="callout" src="/assets/callout.png" /> 
                     &#124;
                 <a href="http://www.texaswildfirerisk.com/Map" target="blank">go to TxWRAP site</a>
                 </td> 
