fix seeds file and reseed db

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,6 +3,7 @@
 <table>
   <tr>
     <th>Task</th>
+    <th>Fact</th>
     <th>Difficulty</th>
     <th></th>
     <th></th>
@@ -10,6 +11,7 @@
   </tr>
   <tr>
     <td><%= @random.task %></td>
+    <td><%= @random.fact %></td>
     <td><%= @random.difficulty %></td>
   </tr>
 </table>
