--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :task %><br />
     <%= f.text_area :task %>
   </div>
+    <div class="field">
+    <%= f.label :fact %><br />
+    <%= f.text_area :fact %>
+  </div>
   <div class="field">
     <%= f.label :difficulty %><br />
     <%= f.text_field :difficulty %>
