--- a/app/views/users/get.html.erb
+++ b/app/views/users/get.html.erb
@@ -1,5 +1,5 @@
 <h2>Additional Info</h2>
-<div>We're almost there! Please confirm the following information</div>
+<p>We're almost there! Please confirm the following information</p>
 
 <%= form_for(@user, { :action => "update" }) do |f| %>
 
