--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -75,10 +75,10 @@ p, label {
 .address label {
 	display:none;
 	}	
-input {
+/*input {
 	margin: 10px;
 	padding: 5px;
-}
+}*/
 .note {
 	font-size: 12px;
 	font-weight: 500;
@@ -130,7 +130,7 @@ form { margin: 0; }
 fieldset { border: 0; margin: 0; padding: 0; }
 label { cursor: pointer; }
 legend { border: 0; *margin-left: -7px; padding: 0; white-space: normal; }
-
+/*---
 button, input, select, textarea { 
 	font-size: 100%;
 	margin: 0; 
@@ -240,12 +240,12 @@ input[type="search"]::
 	-webkit-search-decoration, input[type="search"]::-webkit-search-cancel-button { -webkit-appearance: none; }
 button::
 	-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }
-*/
 textarea { 
 	overflow: auto; vertical-align: top; resize: vertical; }
 input:valid, textarea:valid {  }
 input:invalid, textarea:invalid { 
 	background-color: #f0dddd; }
+*/
 
 table { 
 	border-collapse: collapse; 
