--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -1,29 +1,31 @@
 <%= form_for @feedback, :url => contact_path do |form| %>
+<div class="control-group">
   <div id="contact-detail">
-  <fieldset class="fields">
-    <div class="field">
-      <%= form.label :name %>
-      <%= form.text_field :name %>
+      <fieldset class="fields">
+            <div class="field">
+              <%= form.label :name %>
+              <%= form.text_field :name %>
+            </div>
+            
+            <div class="field">
+              <%= form.label :email %>
+              <%= form.text_field :email %>
+            </div>
+            <div class="field">
+              <%= form.label :subject %>
+              <%= form.text_field :subject %>
+            </div>
+            
+            <div class="field">
+              <%= form.label :body %>
+              <%= form.text_area :body %>
+            </div>
+          </fieldset>
+          
+          <fieldset class="actions">
+            <%= form.submit "Send" %>
+      </fieldset>
+      <a href="http://bit.ly/preparedlysurvey"><input class="btn btn-success btn" type="submit" value="Take our survey"></a>
     </div>
-    
-    <div class="field">
-      <%= form.label :email %>
-      <%= form.text_field :email %>
-    </div>
-    <div class="field">
-      <%= form.label :subject %>
-      <%= form.text_field :subject %>
-    </div>
-    
-    <div class="field">
-      <%= form.label :body %>
-      <%= form.text_area :body %>
-    </div>
-  </fieldset>
-  
-  <fieldset class="actions">
-    <%= form.submit "Send" %>
-  </fieldset>
-  <a href="http://bit.ly/preparedlysurvey"><input class="button orange signup" type="submit" value="Take our survey"></a>
 </div>
 <% end %>
