--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,13 @@
 
   <title>Preparedly</title>
     <meta name="viewport" content="width=device-width,initial-scale =1, user-scalable = no" />
+  <%= stylesheet_link_tag    "bootstrap", :media => "all" %>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= yield :stylesheet_yield %>
   <%= yield :fb_og_tags %>
 
   <%= stylesheet_link_tag "mobile", :media => "all and (max-width: 600px)" %>
   <%= javascript_include_tag "application" %>
-
   <%= csrf_meta_tags %>
 
 </head>
@@ -67,14 +67,14 @@
 	<div id="footer-bottom">
 	</div>
 </div>
-
+<!-- Typekit -->
 <script type="text/javascript" src="http://use.typekit.com/osj8jgk.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 <%= yield :javascript_yield %>
 <%= javascript_include_tag "application" %>
 
 </body>
-  <!-- Google Analytics -->
+<!-- Google Analytics -->
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
