--- a/app/views/map/get.html.erb
+++ b/app/views/map/get.html.erb
@@ -1,10 +1,12 @@
             <%= form_tag("/map", :method=> "post") do %>
             <h2> Welcome. <br>Enter your address and we'll tell you about the risk of your location! </h2>
-                <%= text_field_tag(:q, nil,  :placeholder => 'enter your address in Texas here', :class => 'address') %>
-                <%= submit_tag("Locate", :class => 'blue button') %>
-            
+                <div class="controls">
+                    <div class="input-append">
+                        <%= text_field_tag(:q, nil,  :placeholder => 'enter your address in Texas here', :class => 'form-inline input-xx-large') %><%= submit_tag("Go", :class => 'btn btn-info btn') %>
+                        <br><span class="help-inline note"> Include city and state, only available for the state of Texas.</span>
+                    </div>
+                </div>
             <% end %>
-            <div class="note"> Include city and state, only available for the state of Texas.</div>
             </br>
              <hr></hr>
              </br>
@@ -13,7 +15,7 @@
             </h2>
             </br>
 
-            <a href="/about"><button class="blue button signup big">Read more about prepared.ly >></button></a>
+            <a href="/about"><button class="btn btn-info btn-large">Read more about prepared.ly >></button></a>
             </br>
             <hr></hr>
 <div class="column-wrapper">   
