--- a/app/views/map/post.html.erb
+++ b/app/views/map/post.html.erb
@@ -92,11 +92,11 @@
 </div>
 <% content_for :javascript_yield do %>
   <!-- scripts -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  
   <script src="http://code.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
+<!--  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="app/assets/javascripts/wax.leaflet.min.js"></script>
-  <script type="text/javascript" src="app/assets/javascripts/cartodb-leaflet.js"></script>
-  <script type="text/javascript" src="/assets/bootstrap-tooltip.js"></script>
+  <script type="text/javascript" src="app/assets/javascripts/cartodb-leaflet.js"></script>-->
 
   <% if @coordinates %>
     <script type="text/javascript">
