task page super basic layout

--- a/app/views/map/post.html.erb
+++ b/app/views/map/post.html.erb
@@ -21,7 +21,7 @@
 <!-- div that will display the map that is set using below javascript -->
     <div id="map"></div>
     
-    <div id="map-detail">
+    <div class="detail-col">
         <table>
             <thead>
                 <td><h4><%= @address.address %></h4>
