--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -237,7 +237,15 @@ td { vertical-align: top; }
 	float:left;
 	margin-top: 1px;
 }
-#map-detail {
+.main-col {
+	border: #3AAFBF solid thin;
+	min-width: 325px;
+    height: 479px;
+    width:60%;
+	float:left;
+	margin-top: 1px;
+}
+.detail-col {
 	border: #3AAFBF solid thin;
 	margin-left: 8px;
     height: 449px;
