--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -231,14 +231,16 @@ td { vertical-align: top; }
 }
 #map {
 	border: #3AAFBF solid thin;
+    border-radius: 4px 4px 4px 4px;
 	min-width: 325px;
     height: 479px;
     width:60%;
 	float:left;
 	margin-top: 1px;
 }
+
 .main-col {
-	border: #3AAFBF solid thin;
+	/*border: #3AAFBF solid thin;*/
 	min-width: 325px;
     /*height: 479px;*/
     width:60%;
@@ -246,6 +248,7 @@ td { vertical-align: top; }
 	margin-top: 1px;
 }
 .detail-col {
+    border-radius: 4px 4px 4px 4px;
 	border: #3AAFBF solid thin;
 	margin-left: 8px;
     /*height: 460px;*/
@@ -281,9 +284,18 @@ td { vertical-align: top; }
 }
 .task, .task-hist, .task-butt {
 	padding: 10px;
+	margin: 10px;
 }
 .task p{
+	color: #333333;
     font-size: 35px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.2em;
+    margin: 0px;
+}
+.task-detail {
+    font-size: 20px;
     font-style: normal;
     font-weight: 300;
     line-height: 1.2em;
@@ -294,7 +306,12 @@ td { vertical-align: top; }
 	font-size: 15px;
 	font-weight: 300;
 }
-.task-butt {
+.taskbox {
+    border-radius: 4px 4px 4px 4px;
+    background: #CCCCCC;
+}
+.task-butt a {
+	color: #ffffff;
 }
 /*------------- map: tool tip and risk assessment -------*/
 .risk {
@@ -326,7 +343,7 @@ td { vertical-align: top; }
 	width:210px;
 	text-align:justify;
 	}	
-
+/*
 a.tooltip {outline:none; } 
 a.tooltip strong {line-height:30px;} 
 a.tooltip:hover {text-decoration:none;} 
@@ -352,7 +369,7 @@ a.tooltip:hover span{
 	left:-12px;
 	} 
 /*CSS3 extras*/ 
-a.tooltip span { 
+/*a.tooltip span { 
 	border-radius:4px; 
 	-moz-border-radius: 4px; 
 	-webkit-border-radius: 4px; 
@@ -719,80 +736,79 @@ margin-top:-32767px;/* thank you Erik J - negate effect of float*/
   margin-bottom: 0;
 }
 
-/* THE SPEECH BUBBLE
-------------------------------------------------------------------------------------------------------------------------------- */
 
-.triangle-border {
-	position:relative;
-	padding:15px;
-	margin:1em 0 3em;
-	border:5px solid #3AAFBF;
-	color:#333;
-	background:#fff;
-	/* css3 */
-	-webkit-border-radius:10px;
-	-moz-border-radius:10px;
-	border-radius:10px;
+/*-------------------side bubbles -----------------------*/
+.triangle-right.left:after {
+    border-width: 15px 17px 15px 0;
+    bottom: auto;
+    left: -17px;
+    top: 11px;
+}
+.lightblue.triangle-right.left:after {
+    border-color: transparent #99CCCC;
+}
+.darkgray.triangle-right.left:after {
+    border-color: transparent #333333;
+}
+.triangle-right:after {
+    border-style: solid;
+    border-width: 20px 0 0 20px;
+    bottom: -20px;
+    content: "";
+    display: block;
+    left: 50px;
+    position: absolute;
+    width: 0;
+}
+.lightblue.triangle-right:after {
+	border-color: #99CCCC transparent;
+}
+.darkgray.triangle-right:after {
+    border-color: #333333 transparent;
+}
+.triangle-right.left {
+    margin-left: 20px;
+}
+.lightblue.triangle-right.left {
+	border: #99CCCC transparent;
+}
+.darkgray.triangle-right.left {
+    border: #333333 transparent;
+}
+.triangle-right {
+    background: -moz-linear-gradient(#3AAFBF, #3AAFBF) repeat scroll 0 0 transparent;
+    border-radius: 4px 4px 4px 4px;
+    color: #FFFFFF;
+    /*margin: 1em 0 3em;*/
+    padding: 15px;
+    position: relative;
+    border: none;
+
+}
+.lightblue.triangle-right {
+    background: -moz-linear-gradient(#99CCCC, #99CCCC) repeat scroll 0 0 transparent;
+}
+.darkgray.triangle-right {
+    background: -moz-linear-gradient(#333333, #333333) repeat scroll 0 0 transparent;
 }
 
-/* Variant : left
------------------------------------------- */
 
-.triangle-isosceles.left:after {
-	top:16px; /* controls vertical position */
-	left:-50px; /* value = - border-left-width - border-right-width */
-	bottom:auto;
-	border-width:10px 50px 10px 0;
-	border-color:transparent #f3961c;
+/* -------------tabbed box ------------*/
+/* --------------note: this is from for Togglable tabs with bootstrap-tab.js, but since it's only one tab it's not using any js----*/
+.nav-tabs {
+	border: none;
+	position: relative;
+	top: 19px;
+	left:-40px;
 }
-.triangle-border.left {
-	margin-left:30px;
+.nav-tabs > .active > a,
+.nav-tabs > .active > a:hover {
+  background-color: #CCCCCC;
+  /*border: 1px solid #3AAFBF;*/
+  border-bottom-color: transparent;
+  cursor: default;
 }
-/* Variant : left
------------------------------------------- */
-
-/* creates the larger triangle */
-.triangle-border.left:before {
-	top:27px; /* controls vertical position */
-	bottom:auto;
-	left:-20px; /* value = - border-left-width - border-right-width */
-	border-width:35px 20px 35px 0;
-	border-color:transparent #3AAFBF;
-}
-
-/* creates the smaller  triangle */
-.triangle-border.left:after {
-	top:29px; /* value = (:before top) + (:before border-top) - (:after border-top) */
-	bottom:auto;
-	left:-20px; /* value = - border-left-width - border-right-width */
-	border-width:17px 22px 17px 0;
-	border-color:transparent #fff;
-}
-/* THE TRIANGLE
-------------------------------------------------------------------------------------------------------------------------------- */
-
-.triangle-border:before {
-	content:"";
-	position:absolute;
-	bottom:-20px; /* value = - border-top-width - border-bottom-width */
-	left:40px; /* controls horizontal position */
-    border-width:20px 20px 0;
-	border-style:solid;
-    border-color:#3AAFBF transparent;
-    /* reduce the damage in FF3.0 */
-    display:block; 
-    width:0;
-}
-/* creates the smaller  triangle 
-.triangle-border:after {
-	content:"";
-	position:absolute;
-	bottom:-13px; /* value = - border-top-width - border-bottom-width
-	left:47px; /* value = (:before left) + (:before border-left) - (:after border-left) 
-	border-width:13px 13px 0;
-	border-style:solid;
-	border-color:#fff transparent;
-    /* reduce the damage in FF3.0 
-    display:block; 
-    width:0;
-}*/
+.nav-tabs li a {
+	padding-bottom: 0px;
+    padding-right: 15px;
+	}
