remove old feedback form scaffold

--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -40,7 +40,7 @@ Contact AFD
         </div>
         <div class="column reg">
             <h2>Contact AFD</h2>
-                <p>Wildfire Prevention expert Lt. Josh Portie and other specialists at AFD are available to answer brief questions and coordinate on-site & neighborhood visits in the Austin area. Send an email <a href="mailto:Josh.Portie@austintexas.gov">here</a>.
+                <p>Wildfire Prevention expert Lt. Josh Portie and other specialists at AFD are available to answer brief questions and coordinate on-site & neighborhood visits in the Austin area. <a href="contacts/new">Ask a question here</a>.
                 </p>   
         </div>  
      </div> <!--end column-full-->    
